force-app/main/default/objects/Apttus_Approval__ApprovalsCustomConfig__c/fields/Apttus_Approval__AsyncPreviewEmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__AsyncPreviewEmailTemplate__c</fullName>
    <description>The name of the Email Template used to send notifications when an asynchronous preview action has completed. This will be the global default for context objects of this type and cannot be overridden.</description>
    <inlineHelpText>The name of the Email Template used to send notifications when an asynchronous preview action has completed. This will be the global default for context objects of this type and cannot be overridden.</inlineHelpText>
    <label>Async Preview Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>